@@ -1,0 +1,16 @@
+{
+  "data": [
+    {
+      "timestamp": "2016-10-01T00:00:00+02:00",
+      "value": 64.543223555555551
+    },
+    {
+      "timestamp": "2016-11-01T00:00:00+01:00",
+      "value": 35.739100000000001
+    },
+    {
+      "timestamp": "2016-12-01T00:00:00+01:00",
+      "value": 26.4548851
+    }
+  ]
+}
