@@ -60,3 +60,4 @@
 2025-07-07: Add resolution parameter support for calculating yield losses
 2025-09-01: Add alarm closure reason
 2025-12-08: Add from/to date range parameters to forecast endpoint
+2025-12-18: Add alternative forecast yield endpoint
